--- a/dev/index.html
+++ b/dev/index.html
@@ -7,7 +7,9 @@
   <title>Document</title>
 </head>
 <body>
-  OK
-  <script src="assets/main.js"></script>
+  <my-app>Loading...</my-app>
+  <script src="assets/polyfills.js"></script>
+  <script src="assets/vendor.js"></script>
+  <script src="assets/app.js"></script>
 </body>
 </html>
